--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline{
     }
     post {
         success {
-            artifacts '**/*.war'
+            archive '**/*.war'
             junit '**/TEST-*.xml'
         }
     }
